@@ -1,3 +1,3 @@
 #,,,,,,,,,,,,,,,,,,,,,,"generated_by='OpenQuake engine 3.8.0-git57e535648b',start_date='2019-10-16T08:35:02',checksum=3027975162,kind='mean',investigation_time=50.0,imt='PGA'"
 lon,lat,depth,poe-0.0050000,poe-0.0068764,poe-0.0094569,poe-0.0130059,poe-0.0178867,poe-0.0245991,poe-0.0338306,poe-0.0465264,poe-0.0639867,poe-0.0879994,poe-0.1210235,poe-0.1664408,poe-0.2289021,poe-0.3148036,poe-0.4329420,poe-0.5954149,poe-0.8188600,poe-1.1261588,poe-1.5487796,poe-2.1300000
-0.00000,0.00000,0.00000,9.61335710e-04,9.33656545e-04,8.89628792e-04,8.26680482e-04,7.45369874e-04,6.49871013e-04,5.47187103e-04,4.45230658e-04,3.50796307e-04,2.68267942e-04,1.99419496e-04,1.44036551e-04,1.00835081e-04,6.80819339e-05,4.40515730e-05,2.70750705e-05,1.56551598e-05,8.42399173e-06,4.17201071e-06,1.87200299e-06
+0.00000,0.00000,0.00000,9.613357E-04,9.336565E-04,8.896288E-04,8.266805E-04,7.453699E-04,6.498710E-04,5.471871E-04,4.452307E-04,3.507963E-04,2.682679E-04,1.994195E-04,1.440365E-04,1.008351E-04,6.808194E-05,4.405157E-05,2.707507E-05,1.565516E-05,8.423992E-06,4.172011E-06,1.872003E-06
